--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,4 +49,10 @@ dependencies {
     implementation 'com.github.Bleoo:WindowImageView:1.0.2'
     implementation 'com.facebook.fresco:fresco:1.5.0'
 
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    implementation 'com.android.support:cardview-v7:25.3.1'
+    implementation 'com.github.anzaizai:EasySwipeMenuLayout:1.1.4'
+
+
 }
